# Advent-of-Code

./: .gitignore  pyproject.toml
2019/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb  05.ipynb  06.ipynb  07.ipynb  08.ipynb  09.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb  14.ipynb  15.ipynb  16.ipynb  17.ipynb  18.ipynb  19.ipynb  20.ipynb
2020/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb  05.ipynb  06.ipynb  07.ipynb  08.ipynb  09.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb  14.ipynb  15.ipynb  16.ipynb  17.ipynb  18.ipynb  19.ipynb  20.ipynb  21.ipynb  22.ipynb  23.ipynb  24.ipynb  25.ipynb
2021/: 01.ipynb  oui.ipynb
2022/: oui.ipynb
2024/: oui.ipynb
2025/: oui.ipynb
new_year/: oui.ipynb
